Set the same JVM options for benchmarks to run them with different JDK/GraalVM versions